@@ -20,6 +20,7 @@
      \dots,
      id.n = 3, labels.id = names(residuals(x)), cex.id = 0.75,
      qqline = TRUE, cook.levels = c(0.5, 1.0),
+     cook.col = 8, cook.lty = 2, cook.legendChanges = list(),
      add.smooth = getOption("add.smooth"),
      iter.smooth = if(isGlm) 0 else 3,
      label.pos = c(4,2),
@@ -67,6 +68,14 @@
   \item{qqline}{logical indicating if a \code{\link{qqline}()} should be
     added to the normal Q-Q plot.}
   \item{cook.levels}{levels of Cook's distance at which to draw contours.}
+  \item{cook.col, cook.lty}{color and line type to use for these contour
+    lines.}
+  \item{cook.legendChanges}{a \code{\link{list}} (or \code{NULL} to
+    suppress the call) of arguments to \code{\link{legend}} which should be
+    \emph{modified} from (or added to) the \code{plot.lm()} default \code{
+      list(x = "bottomleft", legend = "Cook's distance = c",
+           lty = cook.lty, col = cook.col, text.col = cook.col,
+           bty = "n", adj = 0.1, y.intersp = 1/8) }.}
   \item{add.smooth}{logical indicating if a smoother should be added to
     most plots; see also \code{panel} above.}
   \item{iter.smooth}{the number of robustness iterations, the argument
@@ -173,7 +182,7 @@ plot(lm.SR)
 
 ## 4 plots on 1 page;
 ## allow room for printing model formula in outer margin:
-par(mfrow = c(2, 2), oma = c(0, 0, 2, 0))
+par(mfrow = c(2, 2), oma = c(0, 0, 2, 0)) -> opar
 plot(lm.SR)
 plot(lm.SR, id.n = NULL)                 # no id's
 plot(lm.SR, id.n = 5, labels.id = NULL)  # 5 id numbers
@@ -182,20 +191,34 @@ plot(lm.SR, id.n = 5, labels.id = NULL)  # 5 id numbers
 ## Cook's distances instead of Residual-Leverage plot
 plot(lm.SR, which = 1:4)
 
-## Fit a smooth curve, where applicable:
-plot(lm.SR, panel = panel.smooth)
-## Gives a smoother curve
+## All the above fit a smooth curve where applicable
+## by default unless "add.smooth" is changed.
+## Give a smoother curve by increasing the lowess span :
 plot(lm.SR, panel = function(x, y) panel.smooth(x, y, span = 1))
 
-par(mfrow = c(2,1))  # same oma as above
+par(mfrow = c(2,1)) # same oma as above
 plot(lm.SR, which = 1:2, sub.caption = "Saving Rates, n=50, p=5")
+
+## Cook's distance tweaking; col / "legend" suppressed here
+par(mfrow = c(2,3)) # same oma ...
+plot(lm.SR, which = 1:6, cook.col = "royalblue")
+
+## A case where over plotting of the "legend" is to be avoided:
+if(dev.interactive()) getOption("device")(height = 6, width = 4)
+par(mfrow= c(3,1), mar= c(5,5,4,2)/2 +.1, mgp= c(1.4, .5, 0))
+plot(lm.SR, which=5, extend.ylim.f = c(0.2, 0.08))
+plot(lm.SR, which=5, cook.lty="dotdash",
+     cook.legendChanges = list(x = "bottomright"))
+plot(lm.SR, which=5, cook.legendChanges=NULL)# no "legend"
 
 \dontshow{
 ## An example with *long* formula that needs abbreviation:
+par(mfrow = c(2,2))
 for(i in 1:5) assign(paste("long.var.name", i, sep = "."), runif(10))
 plot(lm(long.var.name.1 ~
         long.var.name.2 + long.var.name.3 + long.var.name.4 + long.var.name.5))
 }
+par(opar) # reset par()s
 }
 \keyword{hplot}
 \keyword{regression}
